--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-fastapi==0.115.0
-uvicorn[standard]==0.30.6
-numpy==2.0.1
+python -m venv .venv && source .venv/bin/activate   # Windows: .venv\Scripts\activate
+pip install -r requirements.txt
+python laser_health_mockup.py   # or: uvicorn laser_health_mockup:app --reload --port 8000
